--- a/login.css
+++ b/login.css
@@ -1,4 +1,36 @@
+
 form{
-    padding-left: 20%;
-    padding-top: 20;
+    padding-left: 30%;
+    padding-top:17%;
 }
+h1{
+    top: -30px;
+    left: 10px;
+    font-size: 10px;
+    font-weight:  bold;
+    letter-spacing: 20px;
+    color: black;
+
+}
+#email{
+    width: 100px;
+    border: 1px;
+    padding: 4px;
+    border-radius: 5px;
+
+}
+body{
+    background-image:url(pexels-felixmittermeier-956999.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size:cover;
+    }
+    label{
+      color:white;
+    }
+    h3{
+      color:white;
+    }
+    button{
+      background-color: white;
+    }
